--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<title>Grid Subdivision</title>
 		<link rel="stylesheet" type="text/css" href="index.css">
-		<script src="../libs/jquery.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="index.js"></script>
 	</head>
 	<body>
