--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
 						<input type="text" id="draw_line_amount" class="input_field" maxlength="4" value="100"></input>
 					</form>
 				</div>
+				<div class="option_box">
+					<div class="option_title unselectable">min. block size</div>
+					<form>
+						<input type="text" id="min_block_size" class="input_field" maxlength="2" value="30"></input>
+					</form>
+				</div>
 			</div>
 			<canvas id="canvas" width="1280px" height="720px"></canvas>
 			<div id="button" class="button clickable unselectable">Generate Lines</div>
